# deepdaw

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat
.github/workflows/: build-pr.yml  build.yml  ci-build.yml
assets/: .gitkeep
cmake/: GenBuildInfo.cmake
docs/: PHASE0_FOUNDATION_SPEC.md  PHASE0_VALIDATION_QUICKSTART.md  PHASE1_IMPLEMENTATION_CHECKLIST.md  PHASE1_TRACKS_TIMELINE_SPEC.md  PHASE2_AUDIO_CLIPS_SPEC.md  PHASE3_RECORDING_SPEC.md  PHASE4_MIXING_SPEC.md  PHASE5_MIDI_SPEC.md  TEST_RESULT_TEMPLATE.md
src/: ChannelStripComponent.cpp  ChannelStripComponent.h  Clip.h  ClipComponent.cpp  ClipComponent.h  DeepDAWApplication.cpp  DeepDAWApplication.h  LookAndFeel.cpp  LookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiNote.h  MixerComponent.cpp  MixerComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  Project.cpp  Project.h  TimelineComponent.cpp  TimelineComponent.h  TimelineRulerComponent.cpp  TimelineRulerComponent.h  Track.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackListComponent.cpp  TrackListComponent.h  TransportComponent.cpp  TransportComponent.h
